--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head></head>
   <body>
-    <p>Welcome to react calculator</p>
+    <div id="app"></div>
   </body>
+  <script src="./bundle.js"></script>
 </html>
